--- a/Introduction JS/002/index.html
+++ b/Introduction JS/002/index.html
@@ -21,9 +21,8 @@
     <p>Ja me livrei da maldição</p>
 
     <script>
-        window.alert('Minha primeira mensagem');
-        window.confirm('Está gostando de JS');
-        window.prompt('Qual o seu nome?')
+        var nome = window.prompt('Qual é o seu nome?')
+        window.alert('É um grande prazer em te conhecer, ' + nome)
     </script>
 </body>
 </html>
